[gd_scene load_steps=9 format=2]

[ext_resource path="res://tools/editor/EditorModule.tscn" type="PackedScene" id=1]
[ext_resource path="res://graphics/icons/metronome-large.svg" type="Texture" id=2]
[ext_resource path="res://graphics/icons/lyric-start.png" type="Texture" id=3]
[ext_resource path="res://tools/editor/editor_modules/EventsModule.gd" type="Script" id=4]
[ext_resource path="res://graphics/icons/section.png" type="Texture" id=5]
[ext_resource path="res://graphics/icons/fast-forward-mirror.svg" type="Texture" id=6]
[ext_resource path="res://graphics/icons/form-textbox.svg" type="Texture" id=7]
[ext_resource path="res://graphics/icons/lyric-end.png" type="Texture" id=8]

[node name="EditorModule" instance=ExtResource( 1 )]
script = ExtResource( 4 )
module_location = "right_panel"
module_name = "Add events"

[node name="VBoxContainer" parent="MarginContainer/ScrollContainer" index="0"]
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer" index="0"]
margin_right = 1920.0
margin_bottom = 14.0
text = "Create a new event..."
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer" index="1"]
margin_top = 18.0
margin_right = 1920.0
margin_bottom = 369.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer" index="0"]
margin_right = 958.0
margin_bottom = 351.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button" type="Button" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/VBoxContainer" index="0"]
margin_right = 958.0
margin_bottom = 333.0
hint_tooltip = "Changes the BPM (note speed).
Requires auto-timeout."
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource( 2 )
icon_align = 1
expand_icon = true
__meta__ = {
"_editor_description_": ""
}

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/VBoxContainer" index="1"]
margin_top = 337.0
margin_right = 958.0
margin_bottom = 351.0
text = "BPM change"
align = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer" index="1"]
margin_left = 962.0
margin_right = 1920.0
margin_bottom = 351.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button" type="Button" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/VBoxContainer2" index="0"]
margin_right = 958.0
margin_bottom = 333.0
hint_tooltip = "Sets the intro skip time.
Requires intro skip to be enabled
and intro skip min time to be
less than the time of the event."
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource( 6 )
icon_align = 1
expand_icon = true

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/VBoxContainer2" index="1"]
margin_top = 337.0
margin_right = 958.0
margin_bottom = 351.0
text = "Intro skip"
align = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer" index="2"]
margin_top = 373.0
margin_right = 1920.0
margin_bottom = 724.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer2" index="0"]
margin_right = 958.0
margin_bottom = 351.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button" type="Button" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer2/VBoxContainer" index="0"]
margin_right = 958.0
margin_bottom = 333.0
hint_tooltip = "Shows a new phrase."
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource( 3 )
icon_align = 1
expand_icon = true

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer2/VBoxContainer" index="1"]
margin_top = 337.0
margin_right = 958.0
margin_bottom = 351.0
text = "Phrase start"
align = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer2" index="1"]
margin_left = 962.0
margin_right = 1920.0
margin_bottom = 351.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button" type="Button" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer2/VBoxContainer2" index="0"]
margin_right = 958.0
margin_bottom = 333.0
hint_tooltip = "Hides a phrase."
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource( 8 )
icon_align = 1
expand_icon = true

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer2/VBoxContainer2" index="1"]
margin_top = 337.0
margin_right = 958.0
margin_bottom = 351.0
text = "Phrase end"
align = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer" index="3"]
margin_top = 728.0
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer3" index="0"]
margin_right = 958.0
margin_bottom = 352.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button" type="Button" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer3/VBoxContainer" index="0"]
margin_right = 958.0
margin_bottom = 334.0
hint_tooltip = "Creates text inside a phrase
that will be lit up when the event
activates."
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource( 7 )
icon_align = 1
expand_icon = true

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer3/VBoxContainer" index="1"]
margin_top = 338.0
margin_right = 958.0
margin_bottom = 352.0
text = "Lyric word"
align = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer3" index="1"]
margin_left = 962.0
margin_right = 1920.0
margin_bottom = 352.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button" type="Button" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer3/VBoxContainer2" index="0"]
margin_right = 958.0
margin_bottom = 334.0
hint_tooltip = "Creates a new chart section
with a random color."
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource( 5 )
icon_align = 1
expand_icon = true

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer3/VBoxContainer2" index="1"]
margin_top = 338.0
margin_right = 958.0
margin_bottom = 352.0
text = "Chart section"
align = 1

[node name="LyricDialog" type="WindowDialog" parent="." index="1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -164.0
margin_top = -26.0
margin_right = 164.0
margin_bottom = 26.0
window_title = "Create lyric"

[node name="MarginContainer" type="MarginContainer" parent="LyricDialog" index="1"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_right = -10.0
custom_constants/margin_top = 15
custom_constants/margin_bottom = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="LyricDialog/MarginContainer" index="0"]
margin_top = 15.0
margin_right = 308.0
margin_bottom = 39.0

[connection signal="pressed" from="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/VBoxContainer/Button" to="." method="create_bpm_change"]
[connection signal="pressed" from="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/VBoxContainer2/Button" to="." method="create_intro_skip"]
[connection signal="pressed" from="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer2/VBoxContainer/Button" to="." method="create_phrase_start"]
[connection signal="pressed" from="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/Button" to="." method="create_phrase_end"]
[connection signal="pressed" from="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer3/VBoxContainer/Button" to="." method="popup_lyric_dialog"]
[connection signal="pressed" from="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer3/VBoxContainer2/Button" to="." method="create_chart_section"]
[connection signal="text_entered" from="LyricDialog/MarginContainer/LineEdit" to="." method="create_quick_lyric"]
